# rag-wizard

./: README.md  pyproject.toml  pytest.ini
app/: main.py
app/api/: api.py
app/api/endpoints/: document_loader.py
app/core/: config.py
app/services/chunkers/: base.py  chunker_registry.py  recursive_chunker.py
app/services/embedder/: base.py  embedder_registry.py  openai_embedder.py
app/services/ingestion/: ingestion_pipeline.py
app/services/loaders/: base.py  loader_registry.py  pymupdf_loader.py  test_loader.py
app/services/vectorstore/: base.py  milvus_vectorstore.py
app/utils/: helpers.py
scripts/: trim_pdf.py
