[project]
name = "rag-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langsmith>=0.4.6",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
]
