[project]
name = "rag-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langsmith>=0.4.6",
    "openai>=1.97.0",
    "pydantic-settings>=2.10.1",
    "pymilvus[model]>=2.5.13",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]
